added get all blogs and specific blog using blog id and added swagger
