# docs/swagger.json
@@ -71,6 +71,44 @@
                 }
             }
         },
+        "/blogs": {
+            "get": {
+                "description": "Get all blog posts",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Blog"
+                ],
+                "summary": "Get all blog posts",
+                "responses": {
+                    "200": {
+                        "description": "Blogs Fetched Successfully",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.BlogResp"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "invalid data request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "error getting blogs",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/create": {
             "post": {
                 "description": "Create a new user",
@@ -412,6 +450,9 @@
                 "description": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "string"
+                },
                 "is_published": {
                     "type": "boolean"
                 },
@@ -493,6 +534,9 @@
                     "type": "string"
                 },
                 "gender": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "job": {
